--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
     font-family: 'Lobster', cursive;
     font-size: 230px;
     color: #fff;
-    text-shadow: 4px 4px 14px rgba(10, 10, 10, 0.8); /* Stronger text shadow for contrast */
+    text-shadow: 4px 4px 14px rgba(10, 10, 10, 0.8), 0 0 20px rgba(255, 255, 255, 0.7); /* Adding an additional layer of shadow for depth */ /* Stronger text shadow for contrast */
     margin-bottom: 20px; /* Adjust as needed */
 }
 
