--- a/style.css
+++ b/style.css
@@ -23,10 +23,16 @@ header {
 
 h1 {
     font-family: 'Lobster', cursive;
-    font-size: 230px;
-    color: #fff;
-    text-shadow: 4px 4px 14px rgba(10, 10, 10, 0.8), 0 0 20px rgba(255, 255, 255, 0.7); /* Adding an additional layer of shadow for depth */ /* Stronger text shadow for contrast */
-    margin-bottom: 20px; /* Adjust as needed */
+    font-size: 230px; /* Adjust as needed */
+    color: #ffffff; /* White color for the text */
+    -webkit-text-stroke: 2px black; /* Outline effect */
+    text-shadow:
+        3px 3px 0 #000, /* Horizontal shadow */
+        -1px -1px 0 #000, /* Top-left shadow */
+        1px -1px 0 #000, /* Top-right shadow */
+        -1px 1px 0 #000, /* Bottom-left shadow */
+        1px 1px 0 #000; /* Bottom-right shadow */
+    margin-bottom: 20px;
 }
 
 .curtain-menu {
