--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ h1 {
     font-family: 'Lobster', cursive;
     font-size: 230px; /* Adjust as needed */
     color: #ffffff; /* White color for the text */
-    -webkit-text-stroke: 2px black; /* Outline effect */
+    -webkit-text-stroke: 1px black; /* Thinner outline effect */
     text-shadow:
-        3px 3px 0 #000, /* Horizontal shadow */
+        2px 2px 0 #000, /* Horizontal shadow */
         -1px -1px 0 #000, /* Top-left shadow */
         1px -1px 0 #000, /* Top-right shadow */
         -1px 1px 0 #000, /* Bottom-left shadow */
